--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,16 @@
-spring.application.name=test
-# Server configuration
-server.port=8081
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 
-# MySQL database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/livestock?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# Hibernate JPA settings
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 
-#spring.mail.host=smtp.gmail.com
-#spring.mail.port=587
-#spring.mail.username=makineni.uday@gmail.com
-#spring.mail.password=uobk fjki mnyg apio
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.connection-timeout=20000
+
+logging.level.org.springframework=DEBUG
+logging.level.com.zaxxer.hikari=DEBUG
+logging.level.org.hibernate=DEBUG
