--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,27 @@
+#spring.application.name=test
+## Server configuration
+#server.port=8081
+#
+## MySQL database configuration
+#spring.datasource.url=jdbc:mysql://localhost:3306/livestock?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+## Hibernate JPA settings
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=makineni.uday@gmail.com
+#spring.mail.password=uobk fjki mnyg apio
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+
+
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USER}
 spring.datasource.password=${DATABASE_PASSWORD}
